// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBreadcrumbs component should match snapshot with customPathNames 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
>
  <ol
    class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        to="/"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-qscxtw-MuiTypography-root"
        >
          Home
        </p>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        to="/page1"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Page 1
        </p>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        to="/page1/page2"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Page 2
        </p>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`NavBreadcrumbs component should match snapshot with default props 1`] = `
<nav
  aria-label="breadcrumbs"
  class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root"
>
  <ol
    class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
  >
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        to="/"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-qscxtw-MuiTypography-root"
        >
          Home
        </p>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        to="/example"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Example
        </p>
      </a>
    </li>
    <li
      aria-hidden="true"
      class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
    >
      /
    </li>
    <li
      class="MuiBreadcrumbs-li"
    >
      <a
        to="/example/path"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          Path
        </p>
      </a>
    </li>
  </ol>
</nav>
`;
